# silverwind

./: .gitignore  Dockerfile  README-zh_CN.md  README.md  benchmarks-zh_CN.md  benchmarks.md  package-lock.json
.github/workflows/: build.yaml  build.yml  coverage.yaml  linux.yaml  osx.yml  release.yml  rust.yml  test.yaml  windows.yml
benchmarks/: docker-compose.yml  test
benchmarks/caddy/: caddyfile  docker-compose.yaml
benchmarks/envoy/: docker-compose.yaml  envoy.yaml
benchmarks/haproxy/: docker-compose.yaml  haproxy.cfg
benchmarks/nginx/: docker-compose.yaml  nginx.conf
benchmarks/silverwind/: app_config.yaml  docker-compose-backup.yaml  docker-compose.yaml
benchmarks/traefik/: docker-compose.yaml  dynamic_conf.toml  traefik.toml
docker/: docker-compose.yaml  envoy.yaml  rust-proxy.REMOVED.git-id
docker/dashboard/: docker-compose.yaml
docker/mysql/: docker-compose.yaml  init.sql
docker/postgresql/: docker-compose.yaml  docker_postgres_init.sql
docker/prometheus/: docker-compose.yml  prometheus.yml
docker/silverwind/: Dockerfile
docker/timeout-test/: app_config.yaml  docker-compose.yaml
frontend/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  jest.config.ts  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.husky/: commit-msg  pre-commit
frontend/config/: config.ts  defaultSettings.ts  proxy.ts  routes.ts
frontend/mock/: listTableList.ts  notices.ts  route.ts  user.ts
frontend/public/scripts/: loading.js
frontend/src/: access.ts  app.tsx  global.less  global.tsx  manifest.json  requestErrorConfig.ts  service-worker.js  typings.d.ts
frontend/src/components/Footer/: index.tsx
frontend/src/components/HeaderDropdown/: index.tsx
frontend/src/components/RightContent/: AvatarDropdown.tsx  index.tsx
frontend/src/locales/: bn-BD.ts  en-US.ts  fa-IR.ts  id-ID.ts  ja-JP.ts  pt-BR.ts  zh-CN.ts
frontend/src/locales/bn-BD/: component.ts  globalHeader.ts  menu.ts  pages.ts  pwa.ts  settingDrawer.ts  settings.ts
frontend/src/locales/en-US/: menu.ts  pages.ts
frontend/src/locales/fa-IR/: menu.ts  pages.ts
frontend/src/locales/id-ID/: menu.ts  pages.ts
frontend/src/locales/ja-JP/: menu.ts  pages.ts
frontend/src/locales/pt-BR/: globalHeader.ts  menu.ts  pages.ts
frontend/src/locales/zh-CN/: menu.ts  pages.ts  settingDrawer.ts
frontend/src/locales/zh-TW/: menu.ts  pages.ts  settingDrawer.ts
frontend/src/pages/: 404.tsx  Admin.tsx  Welcome.tsx
frontend/src/pages/TableList/: index.tsx
frontend/src/pages/TableList/components/: UpdateForm.tsx
frontend/src/pages/User/Login/: index.tsx  login.test.tsx
frontend/src/pages/User/Login/__snapshots__/: login.test.tsx.snap
frontend/src/services/ant-design-pro/: api.ts  index.ts  login.ts  typings.d.ts
frontend/src/services/swagger/: index.ts  pet.ts  store.ts  typings.d.ts  user.ts
frontend/tests/: setupTests.jsx
frontend/types/: index.d.ts
frontend/types/cache/: login.cache.json
frontend/types/cache/mock/: login.mock.cache.js
go_backend/: .gitignore  go.mod  go.sum  main.go
proxy/: .gitignore  cmd.go  go.mod  go.sum  main.go
proxy/.cargo/: config.toml
rust-proxy/: .gitignore  Cargo.toml  rust-proxy.REMOVED.git-id
rust-proxy/.cargo/: config.toml
rust-proxy/.devcontainer/: devcontainer.json
rust-proxy/config/: app_config.yaml  cacert.pem  privkey.pem  test_key.pem
rust-proxy/src/: main.rs  pool.rs
rust-proxy/src/configuration_service/: app_config_service.rs  app_config_servive.rs  configuration_service.rs  database_store.rs  logger.rs  memory_store.rs  mod.rs
rust-proxy/src/constants/: common_constants.rs  constants.rs  mod.rs
rust-proxy/src/control_plane/: app_config_controller.rs  control_plane.rs  lets_encrypt.rs  mod.rs  responder.rs  rest_api.rs  service_controller.rs
rust-proxy/src/dao/: dao.rs  mod.rs
rust-proxy/src/health_check/: health_check_task.rs  mod.rs  task.rs  timer.rs
rust-proxy/src/health_check_task/: health_check_task.rs
rust-proxy/src/monitor/: mod.rs  prometheus_exporter.rs
rust-proxy/src/pool/: db_connection_pool.rs  mod.rs  pgpool.rs  pool.rs  tcp_manager.rs  tcp_pool.rs
rust-proxy/src/proxy/: grpc_proxy.rs  http_client.rs  http_proxy.rs  mod.rs  proxy.rs  proxy_trait.rs  tcp_proxy.rs  tls_acceptor.rs  tls_stream.rs  websocket_proxy.rs
rust-proxy/src/proxy/http1/: http_client.rs  http_proxy.rs  mod.rs  tls_acceptor.rs  tls_stream.rs  websocket_proxy.rs
rust-proxy/src/proxy/http2/: grpc_proxy.rs  mod.rs
rust-proxy/src/proxy/tcp/: mod.rs  tcp_proxy.rs
rust-proxy/src/timer/: mod.rs  timer.rs
rust-proxy/src/utils/: mod.rs  uuid.rs
rust-proxy/src/vojo/: allow_deny_ip.rs  anomaly_detection.rs  api_service_manager.rs  app_config.rs  app_config_vistor.rs  app_error.rs  authentication.rs  base_response.rs  handler.rs  health_check.rs  lets_encrypt.rs  mod.rs  rate_limit.rs  route.rs  vojo.rs
vue/: README.md  package-lock.json  package.json
