[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.9.0"
backtrace = "0.3.67"
anyhow = { version = "1.0", default-features = false }



async-trait = "0.1"
tokio = { version = "1.0.0",  features = ["full", "tracing"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
bb8 = "0.8.0"
tokio-util = { version = "0.7.0",  features = ["full"] }
http-body = "1.0.0-rc.2"
http-body-util = { version = "0.1.0-rc.2"}
hyper = { version = "0.14",  features = ["full"] }
http = "0.2"
rocket =  { version = "0.5.0-rc.2", features = ["json"] }
oas3 = "0.2.1"

diesel = { version = "2.0.0", features = ["r2d2","mysql"] }
dotenvy = "0.15"

lazy_static = "1.4.0"
derive_builder = "0.12.0"
serde_json = "1.0"
serde = "1.0"
serde_yaml = "0.9"
dashmap = "5.4.0"
regex = "1"
serial_test = "1.0.0"
hyper-rustls = "0.23.2"
rustls = { version = "0.20.1", default-features = false, features = ["tls12"] }
tokio-rustls = { version = "0.23", default-features = false }
futures-util = { version = "0.3.1", default-features = false }
rustls-pemfile = "1.0.2"
pkcs8 = { version = "0.7", features = ["encryption", "pem", "std"] }
