[package]
name = "silverwind"
version = "0.0.6"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
#debug = true

##Optimize For Size
strip = true


[dependencies]
log = "0.4"
clap = { version = "4.1.1", features = ["derive"] }
backtrace = "0.3.67"
anyhow = { version = "1.0", default-features = false }



async-trait = "0.1.66"
tokio = { version = "1.27.0",  features = ["full", "tracing"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
bb8 = "0.8.0"
tokio-util = { version = "0.7.7",  features = ["full","time"] }
http-body = "1.0.0-rc.2"
http-body-util = { version = "0.1.0-rc.2"}
hyper = { version = "0.14",  features = ["full"] }
http = "0.2.9"
oas3 = "0.2.1"
warp = "0.3.4"

dotenvy = "0.15"

lazy_static = "1.4.0"
derive_builder = "0.12.0"
serde_json = "1.0"
serde = "1.0"
serde_yaml = "0.9"
dashmap = "5.4.0"
regex = "1"
serial_test = "1.0.0"
hyper-rustls = {version="0.23.2",features=["webpki-roots"]}
rustls = { version = "0.20.1", default-features = false, features = ["tls12"] }
tokio-rustls = { version = "0.23", default-features = false }
futures-util = { version = "0.3.1", default-features = false }
rustls-pemfile = "1.0.2"
pkcs8 = { version = "0.7", features = ["encryption", "pem", "std"] }
strum_macros = "0.24.3"
strum = "0.24"
dyn-clone = "1.0.11"
typetag = "0.2"
rand = "0.8.5"
hyper-staticfile = "0.9.5"
url = "2.3.1"
mockall = "0.11.2"
iprange = "0.6.7"
ipnet = "2.7.1"
uuid = {version="1.3.0",features = [
    "v4",                
    "fast-rng",         
    "macro-diagnostics"
]}
base64 = "0.21.0"
log4rs = "1.2.0"
prometheus = "0.13.3"
delay_timer = "0.11.4"
acme-lib = "0.8.2"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"


num_cpus = "1.0"
sha-1= "0.10.1"
hyper-tls= "0.5.0"