[package]
name = "silverwind"
version = "0.0.22"
authors = ["lsk"]
license = "Apache-2.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
#debug = true

##Optimize For Size
strip = true

[package.metadata.cross.target.x86_64-unknown-linux-musl]
xargo = false
# dockerfile = "./Dockerfile"
pre-build = ["apt-get -y update && apt-get -y install pkg-config libssl-dev"]

[dependencies]
acme-lib = "0.8.2"
async-trait = "0.1.77"
axum="0.7.4"
backtrace = "0.3.69"
base64 = "0.21.0"
bytes = "1"
derive_builder = "0.12.0"
dyn-clone = "1.0.11"
futures = { version = "0.3.30", features = ["thread-pool"]}
futures-util = { version = "0.3.1", default-features = false }
h2 = "0.4.2"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = { version = "0.1.0"}
hyper = { version = "1.2.0",  features = ["full"] }
hyper-rustls = {version="0.26.0",features=["webpki-roots"]}
hyper-staticfile = "0.10.0"
hyper-tls= "0.5.0"
hyper-util = { version = "0.1.3", features = ["full"] }
ipnet = "2.7.1"
iprange = "0.6.7"
mimalloc = { version = "*", features = ["secure"] }
num_cpus = "1.0"
openssl = { version = "0.10.57", features = ["vendored"] }
pkcs8 = { version = "0.7", features = ["encryption", "pem", "std"] }
prometheus = "0.13.3"
rand = "0.8.5"
regex = "1"
rustls = { version = "0.22", default-features = false,features = ["ring","tls12","logging"] }
rustls-pemfile = "2.1.0"
rustls-pki-types = "1.3.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serial_test = "1.0.0"
sha-1= "0.10.1"
strum_macros = "0.24.3"
thiserror = "1.0.57"
tokio = { version = "1.36.0",  features = ["full", "tracing"] }
tokio-rustls = { version = "0.25", default-features = false }
tokio-util = { version = "0.7.10",  features = ["full","time"] }
tower = { version = "0.4", features = ["util"] }
tower-http= {version = "0.5.2",features = ["full"]}
tracing= "0.1.4"
tracing-subscriber= "0.3.18"
tracing-appender = "0.2.3"
typetag = "0.2"
url = "2.3.1"
uuid = {version="1.3.0",features = ["v4", "fast-rng","macro-diagnostics"]}
webpki-roots = "0.26.1"



